# docs/swagger.json
@@ -1203,6 +1203,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "Filter by Business ID",
+                        "name": "business_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
@@ -1301,9 +1307,14 @@
                 }
             }
         },
-        "/meta/ad-accounts/unassigned": {
+        "/meta/ad-accounts/businesses": {
             "get": {
-                "description": "Retrieve all ad accounts not assigned to any brand",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get unique business options available in ad accounts",
                 "consumes": [
                     "application/json"
                 ],
@@ -1313,7 +1324,45 @@
                 "tags": [
                     "Meta Ad Accounts"
                 ],
-                "summary": "Get Unassigned Meta Ad Accounts",
+                "summary": "Get Business Options",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.BusinessOptionResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/meta/ad-accounts/unassigned": {
+            "get": {
+                "description": "Get paginated list of Meta ad accounts that are not assigned to any brand",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Meta Ad Accounts"
+                ],
+                "summary": "Get Unassigned Ad Accounts",
                 "parameters": [
                     {
                         "type": "string",
@@ -1332,6 +1381,12 @@
                         "description": "Items per page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by Business ID",
+                        "name": "business_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1340,7 +1395,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/response.Response"
+                                    "$ref": "#/definitions/response.PaginationResponse"
                                 },
                                 {
                                     "type": "object",
@@ -1350,9 +1405,6 @@
                                             "items": {
                                                 "$ref": "#/definitions/dto.AdAccountResponse"
                                             }
-                                        },
-                                        "meta": {
-                                            "$ref": "#/definitions/response.Meta"
                                         }
                                     }
                                 }
@@ -1361,6 +1413,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -1533,79 +1591,6 @@
                                         },
                                         "meta": {
                                             "$ref": "#/definitions/response.PaginationMeta"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/meta/businesses": {
-            "get": {
-                "description": "Retrieve all business portfolios synced from Meta API",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Meta Businesses"
-                ],
-                "summary": "Get Meta Businesses (Portfolios)",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Search by name",
-                        "name": "search",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Items per page",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/dto.BusinessResponse"
-                                            }
-                                        },
-                                        "meta": {
-                                            "$ref": "#/definitions/response.Meta"
                                         }
                                     }
                                 }
@@ -3362,9 +3347,6 @@
                 },
                 "brand_id": {
                     "type": "integer"
-                },
-                "business_id": {
-                    "type": "string"
                 }
             }
         },
@@ -3428,26 +3410,14 @@
                 }
             }
         },
-        "dto.BusinessResponse": {
+        "dto.BusinessOptionResponse": {
             "type": "object",
             "properties": {
-                "created_time": {
+                "business_id": {
                     "type": "string"
                 },
-                "id": {
+                "business_name": {
                     "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "profile_picture_uri": {
-                    "type": "string"
-                },
-                "synced_at": {
-                    "type": "string"
-                },
-                "timezone_id": {
-                    "type": "integer"
                 }
             }
         },
